--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,6 +7,7 @@
     </style>
 
     <style name="Theme.ActivityTransparentBackground" parent="@style/Theme.AppCompat">
+<!--        Manifest 에서 설정해 줌-->
         <!--Titlebar 없애는 옵션
             true : Titlebar x
             false : Titlebar o
@@ -23,5 +24,5 @@
         -->
         <item name="android:backgroundDimEnabled">true</item>
     </style>
-    5. 마지막으로 A
+
 </resources>
