--- a/app/src/main/res/layout/alert_is_buy_new_frog.xml
+++ b/app/src/main/res/layout/alert_is_buy_new_frog.xml
@@ -33,7 +33,7 @@
         android:layout_alignLeft="@id/wood"
         android:layout_centerVertical="true"
         android:layout_marginLeft="24dp"
-        android:src="@drawable/normal"/>
+        android:src="@drawable/frog_0_normal"/>
 
     <ImageView
         android:id="@+id/cancel_button"
