--- a/app/src/main/res/layout/alert_is_sell_frog.xml
+++ b/app/src/main/res/layout/alert_is_sell_frog.xml
@@ -111,11 +111,11 @@
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:background="@color/purple_200"
+            android:background="@color/black"
             android:gravity="center"
             android:text="개구리 판매"
             android:textSize="32sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:layout_marginTop="8dp"
             android:textStyle="bold" />
 
