--- a/app/src/main/res/layout/alert_sell_save_new_egg.xml
+++ b/app/src/main/res/layout/alert_sell_save_new_egg.xml
@@ -34,26 +34,26 @@
 
             <TextView
                 android:id="@+id/tv_sell"
-                android:background="@color/purple_200"
+                android:background="@drawable/round_box_black_btn"
+                android:textColor="@color/white"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_height="56dp"
                 android:text="바로 판매"
                 android:textSize="32sp"
-                android:textColor="@color/black"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/tv_save"
                 android:layout_marginLeft="16dp"
-                android:background="@color/purple_200"
+                android:background="@drawable/round_box_black_btn"
+                android:textColor="@color/white"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_height="56dp"
                 android:text="창고 저장"
                 android:textSize="32sp"
-                android:textColor="@color/black"
                 android:textStyle="bold" />
 
         </LinearLayout>
