--- a/app/src/main/res/layout/fragment_trade_page.xml
+++ b/app/src/main/res/layout/fragment_trade_page.xml
@@ -26,7 +26,7 @@
             android:layout_centerInParent="true"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/normal"/>
+            android:src="@drawable/frog_0_normal"/>
 
         <TextView
 
