--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -15,7 +15,7 @@
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/normal"/>
+            android:src="@drawable/frog_0_normal"/>
 
         <LinearLayout
             android:id="@+id/linear_layout"
