--- a/app/src/main/res/layout/listview_store_item.xml
+++ b/app/src/main/res/layout/listview_store_item.xml
@@ -1,88 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:background="@drawable/wood_mid"
-    android:padding="16dp"
-    android:id="@+id/click_background">
+    android:layout_width="wrap_content"
+    >
 
-    <ImageView
-        android:id="@+id/iv_item"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/free_dice"
-        android:layout_marginRight= "16dp"/>
-
-    <LinearLayout
-        android:id="@+id/title"
-        android:layout_toRightOf="@+id/iv_item"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="먹이 증가"
-            android:textSize="24sp"/>
-
-        <TextView
-            android:id="@+id/item_level"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:gravity="right|center_vertical"
-            android:text="LV : 1"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/explain"
-        android:layout_width="180sp"
         android:layout_height="wrap_content"
-        android:text="먹이 먹이기에서 화면에 등장하는 먹이 수가 증가합니다."
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:layout_toRightOf="@+id/iv_item"
-        android:layout_below="@id/title"/>
+        android:background="@drawable/round_box"
+        android:padding="16dp"
+        android:id="@+id/click_background"
+        android:layout_margin="16dp"
+        >
+
+        <ImageView
+            android:id="@+id/iv_item"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/free_dice"
+            android:layout_marginRight= "16dp"/>
+
+        <LinearLayout
+            android:id="@+id/title"
+            android:layout_toRightOf="@+id/iv_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:text="먹이 증가"
+                android:textSize="24sp"/>
+
+            <TextView
+                android:id="@+id/item_level"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:gravity="right|center_vertical"
+                android:text="LV : 1"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/explain"
+            android:layout_width="180sp"
+            android:layout_height="wrap_content"
+            android:text="먹이 먹이기에서 화면에 등장하는 먹이 수가 증가합니다."
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:layout_toRightOf="@+id/iv_item"
+            android:layout_below="@id/title"/>
 
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/iv_item"
-        android:layout_marginTop="16dp"
-        android:weightSum="2"
-        >
-        <Button
-            android:id="@+id/cash"
-            android:text="1000$"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-            android:background="@color/purple_200"
-            android:layout_marginRight="24dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/iv_item"
+            android:layout_marginTop="16dp"
+            android:weightSum="2"
+            >
+            <Button
+                android:id="@+id/cash"
+                android:text="1000$"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:textColor="@color/white"
+                android:background="#333333"
+                android:layout_marginRight="24dp"
 
-            />
-        <Button
-            android:id="@+id/AD"
-            android:text="무료"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:background="@color/purple_200"/>
+                />
+            <Button
+                android:id="@+id/AD"
+                android:text="무료"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/white"
+                android:background="#333333"
+                />
 
-    </LinearLayout>
+        </LinearLayout>
 
 
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</FrameLayout>
